src/css/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
 LOADING FONTS
*/

@layer base {
  @import url("https://fonts.googleapis.com/css2?family=Capriola&family=Inter:wght@200;300;400;500&display=swap");
  font-family: "Capriola", sans-serif;
  font-family: "Inter", sans-serif;
}

/*
 PALETTE STYLING
*/

:root {
  --heather-light: #dcbcfa;
  --heather-dark: #b794f4;
  --dark: #0f1222;
  --darker: #02061b;
  --light: #faf1f3;
  --peach: #ea736b;
  --lemon: #ffc700;
  --sky: #61d0e9;
}

/* purgecss start ignore */

body {
  background-color: var(--dark);
  color: var(--light);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.sticky-footer{
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.project-card {
  background-color: var(--darker);
}

/*
  ANIMATIONS
*/


@keyframes slidein{
  from { transform:translateY(-411px); }
  to   { transform: translateY(0); }
}


/*
  TEXT STYLING
*/

h1 {
  font-size: 2.411em;
  font-family: Capriola;
  font-weight: 200;
}

.subhead {
  font-family: Inter;
  font-size: 19px;
  font-weight: 200;
  line-height: 31px;
}

.project .subhead {
  color: var(--light) !important;
}

h2 {
  font-size: 1.953em;
  font-family: Capriola;
  font-weight: 200;
}

h3 {
  font-size: 1.563em;
  font-family: Capriola;
  font-weight: 200;
}

h4 {
  text-transform: uppercase;
  font-size: 1.25em;
  font-size: 17.5px;
  font-family: Capriola;
  font-weight: 200;
}

h5 {
  font-size: 1.143em;
  font-size: 16px;
  font-family: Capriola;
  font-weight: 200;
}

h6 {
  font-size: 11.2px;
  font-family: Inter;
  text-transform: uppercase;
  font-weight: 400;
  padding: 0 0 5px 0;
  opacity: 0.8;
}

p {
  font-size: 14px;
  font-family: Inter;
  font-weight: 300;
  line-height: 22.85px;
}

.caption {
  font-size: 11.2px;
  font-family: Inter;
  font-weight: 500;
  text-transform: uppercase;
}

a {
  color: var(--heather-light);
}

a:active {
  color: var(--heather-dark);
}

li {
  font-size: 14px;
  font-weight: 300;
  line-height: 22.85px;
  color: var(--light);
}

/* ICON STYLING */

i[class^="ph"] {
  color: var(--light);
  font-size: 20px;
}

.icon-left {
  padding-right: 10px;
}

.icon-right {
  padding-left: 10px;
}

.striken {
  text-decoration: line-through;
}

.tooltipped {
  text-decoration: underline;
  color: var(--heather);
}

.numbered-bullet-point{
  color: var(--sky)!important;
  padding-right: .5rem;
}

.half-highlight {
  background: linear-gradient(to top, var(--peach) 50%, transparent 50%);
}

.project-header {
  margin: 5px 0;
}

.nav a {
  margin: 0.5rem 1.5rem;
  font-size: 1rem;
}

/*
 INTERACTION STYLING
*/

.nav,
.nav a {
  float: right;
  color: var(--heather-light);
  display: flex;
  list-style-type: none;
}

.ghost-button h5 {
  color: var(--heather-light) !important;
}

.ghost-button i[class^="ph"] {
  color: var(--heather-light);
}

.button-div {
  width:100%;
  display: flex;
  justify-content: center;
  margin-bottom: 2rem;
}

.project-nav{
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  overflow-x: auto;
  overflow-y: hidden;
  width: 100%;
  background-color: var(--darker);
  padding: 1rem;
}

.project-nav a{
  margin-right: 1rem;
}

.fixedElement {
  background-color: #c0c0c0;
  position:fixed;
  top:0;
  width:100%;
  z-index:100;
}

/*
 IMG STYLING
*/

.logo {
  padding-left: 10px;
}

.logo-title {
  color: var(--light);
  padding: 0;
}

.persona-img {
  display: flex;
  justify-content: center;
  padding: 20px 0;
}

.demo img {
  min-width: 300px;
  padding: 0 5px 10px 0;
}

.sketch-and-cap {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  align-items:center;
}

.sketch-chunk img {
  flex: 1;
  min-width: 200px;
  max-width: 500px;
}

.sketch-chunk .sketch-info {
  max-width: 500px;
  flex: 1;
  align-items: center;
  justify-content: center;
  min-width: 200px;
}

.sketch-info {
  align-content: center;
}

/*
 CARD / SECTION STYLING
 */

 .content{
 }

 #footer{
   width:100%;
 }

 .under-construction{
   display: flex;
   flex-flow: row nowrap;
   background-color: var(--lemon);
   padding: 20px;
   align-items: center;
   justify-content: space-between;
   animation: slidein .4s ease .2s 1 normal both running ;
 }

 .uc-section{
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
 }

 .under-construction h5, .under-construction .caption, .under-construction i{
  color: var(--dark);
  display: flex;
 }

 .under-construction i{
  padding-right: 10px;
 }


.carousel {
  display: flex;
  flex-flow: row;
  overflow-x: auto;
  overflow-y: hidden;
  width: 100%;
}

.carousel-card {
  background-color: var(--darker);
  display: flex;
  flex-flow: column wrap;
  width: 200px;
  padding: 20px;
  margin: 0 10px;
}

.carousel img {
  padding: 0 10px;
  margin:  0 0 20px 0;
  height: auto;
  max-width: 100%;
}

.carousel-card-text{
}

.info-card {
  background-color: var(--darker);
  border-radius: 10px;
  padding: 15px;
  margin: 10px 0;
}

.card-item {
  margin: 20px 0;
}

.cardless-item {
  margin: 0 15px 30px;
}

.cardless-item:last-of-type {
  margin-bottom: 0;
}

.project-context {
  display: flex;
  flex-flow: row wrap;
}

.project-context .cardless-item {
  flex: 1;
  min-width: 200px;
}

.persona-context {
  margin-right: 5px;
}

.persona-card{
  background-color: var(--dark);
  border-radius: 10px;
  padding: 1rem;
}

.featured-flair {
  padding: 1rem;
  display: flex;
  flex-flow: row nowrap;
  justify-content: end;
  color: var(--light);
  float: right;
}

.not-found{
  display: flex;
  flex-flow: column wrap;
  width: 100%;
  padding: 2rem;
  padding-bottom: 0;
  justify-content: center;
}

#contact{
  display:none;
}

.contact-cta{
  flex-grow:1;
}

.contact-buttons{
  flex-grow:1;
}

.gradient-line{
  padding: 0px 1px;
  margin: 5px 0;
  margin-right: 10px;
  border-radius: 10px;
}

.s-l{
  background-image: linear-gradient(var(--sky), var(--lemon));
}

.l-p{
  background-image: linear-gradient(var(--lemon), var(--peach));
}

.p-s{
  background-image: linear-gradient(var(--peach), var(--sky));
}



.work-chunk{

}

/*
 LIST STYLING
 */

.info-card ul {
  list-style-type: disc;
}

li {
  margin: 8px 0;
}

ul {
  padding: 0 15px;
}

.chunked-list {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

.list-chunk {
  margin-top: 15px;
  flex: 1;
  min-width: 300px;
}

.tinylist{
  columns: 130px 2;
  align-content: top;
  margin-top:0px;
}

/* 
SECTION HEADERS
*/

.section-header {
  margin-bottom: 10px;
}

.heather-intro {
  display: flex;
  flex-flow: column wrap;
  align-self: center;
  justify-content: center;
}

.heather-attributes {
  padding-bottom: 10px;
}

.intro-subhead {
  margin-bottom: 30px;
}

.section-line {
  width: 30px;
  height: 3px;
}

hr {
  width: 40px;
  border-radius: 5px;
  border: 2px solid;
  margin: 60px 0 20px 0;
}

.cardless-item h5,
.info-card h5 {
  padding: 10px 0;
}

/*
 COLOR-BLOCK STYLING
 */

.peach li::marker,
.peach .caption,
.peach h1,
.peach h2,
.peach h3,
.peach h5,
.peach span {
  color: var(--peach);
}

.sky li::marker,
.sky .caption,
.sky h1,
.sky h2,
.sky h3,
.sky h5,
.sky span
.sky i[class^="ph"] {
  color: var(--sky);
}

.lemon li::marker,
.lemon .caption,
.lemon .subhead,
.lemon h1,
.lemon h2,
.lemon h3,
.lemon h5,
.lemon span {
  color: var(--lemon);
}

.peach hr {
  background-color: var(--peach);
  border-color: var(--peach);
}

.sky hr {
  background-color: var(--sky);
  border-color: var(--sky);
}

.lemon hr {
  background-color: var(--lemon);
  border-color: var(--lemon);
}

.irregular {
  color: var(--light) !important;
}

/*
 CUSTOM STYLING
 */

.intro-info {
  width: 100%;
}

.persona-title {
  display: flex;
  justify-content: center;
  color: var(--light);
}

.persona-attributes {
  margin: 20px 0;
}

.key-value-persona {
  display: flex;
  width: 100%;
}

.key-value-persona .caption {
  text-align: right;
  width: 50%;
  padding-right: 10px;
}

.key-value-persona p {
  text-align: left;
  width: 50%;
}

.quote-card {
  display: flex;
  flex-flow: row;
  padding: 15px 20px;
}

.quote-mark {
  flex-grow: 1;
  padding-right: 10px;
}

.quote h3 {
  padding-bottom: 10px;
}

.quote {
  flex-grow: 1;
  margin-bottom: 15px;
  padding-right: 15px;
}

.sketch-chunk:first-of-type {
  margin-top: 0;
}

.sketch-chunk {
  margin-top: 40px;
}

.sketch-chunk h5 {
  float: right;
  margin-right: -13px;
  border-radius: 5px 0 0 5px;
  padding: 0 12px 2px 8px;
  background-color: var(--lemon);
  color: var(--darker);
}

.sketch-chunk .caption {
  margin-bottom: 10px;
}

.problem-statement {
  max-width: 400px;
  margin: auto;
  padding: 15px 15px 20px 15px;
}

@layer components {
  .project {
    @apply flex-col md:flex-row w-full px-4 my-12 flex rounded-md md:mx-0;
  }

  .nav {
    font-family: Capriola;
    font-weight: 200px !important;
    width: 100%;
    justify-content: space-around;
    @apply sm:mt-2 sm:w-auto;
    border: 2px 0 solid var(--heather-light);
  }

  .nav-item {
    @apply rounded-full border-0 transition-all duration-200;
    @apply hover:text-purple-50 transition-all duration-200;
  }

  button {
    /*  @apply bg-purple-300 rounded-full border-4 border-purple-400 transition-all duration-200;
    @apply mt-6 py-1 px-4;
    @apply text-base font-semibold; */
    width: auto;
    width: 200px;
    padding: 13px 19px;
  }

  .ghost-button {
    display: flex;
    flex-direction: row nowrap;
    justify-content: center;
    border-radius: 60px;
    border: 3px solid var(--heather-dark);
    color: var(--heather-light);
  }

  button:hover {
    @apply shadow-3xl transition-all ease-in-out duration-200;
    border: 3px solid var(--darker);
    background-color: var(--heather-darker);
    color: var(--darker);
  }

  .ghost-button:hover{
    background-color: var(--heather-dark);
    color: var(--dark);
    border: 3px solid var(--darker);
    background-color: var(--heather-darker);
  }

  button a {
    @apply flex justify-center;
  }

  .icon-button{
    background-color: var(--heather-light);
    border: 3px solid var(--heather-dark);
    width:50px;
    height: 50px;
    justify-content: center;
    align-content: center;
    padding: 1rem;
    border-radius: 25px;
    display: flex;
    margin-left: 1rem;
  }

  .icon-button:hover{
    background-color: var(--heather-dark);
    border: 3px solid var(--dark);
    @apply shadow-3xl transition-all ease-in-out duration-200;
  }

  .icon-button i[class^="ph"]{
    color: var(--dark);
    font-size: 30px;
    transform: translate(0, -30%);
  }


}


/* purgecss end ignore */

